Fix appearance of broken thumbnails on the upload step
The field height was set to 1px, so the icon representing a broken
thumbnail was not visible. The icon is 38px high, so the field should
be at least that big.

--- a/resources/ui/steps/uw.ui.Upload.less
+++ b/resources/ui/steps/uw.ui.Upload.less
@@ -134,7 +134,7 @@
 	 * min-height ensures the reserved space for a thumbnail gets preserved
 	 * while the thumb gets generated (when there is no content in this div yet)
 	 */
-	min-height: 1px;
+	min-height: 38px;
 	max-height: 120px;
 	margin-right: 1.5em;
 	text-align: center;
